# kleinesonne

./: .prettierrc  TODO.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
.github/workflows/: deliver.yml  integrate.yml  main.yml
back/: Cargo.toml
back/src/: auth.rs  db.rs  dogs.rs  main.rs  news.rs
crates/: .dockerignore  Cargo.toml  Dockerfile
crates/api/: Cargo.toml
crates/api/src/: errors.rs  main.rs  res.rs  util.rs
crates/api/src/admin/: jwt.rs  mod.rs
crates/api/src/auth/: jwt.rs  mod.rs
crates/api/src/dog/: delete.rs  mod.rs  new.rs  read.rs  update.rs
crates/api/src/litter/: delete.rs  mod.rs  new.rs  read.rs  update.rs
crates/api/src/news/: delete.rs  mod.rs  new.rs  read.rs  update.rs
crates/api/src/puppy/: delete.rs  mod.rs  new.rs  read.rs  update.rs
crates/api/src/uploads/: mod.rs  new.rs  read.rs
crates/db/: Cargo.toml  build.rs  schema.sql
crates/db/queries/: admin.sql  dog.sql  litter.sql  news.sql  puppy.sql
crates/db/src/: cornucopia.rs  lib.rs
crates/db/src/queries/: litter.sql  news.sql
db/: .gitignore  psql_dev_dump.sql
front/: .prettierrc  TODO.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
front/src/: ambient.d.ts  app.css  app.html  hook.server.ts
front/src/lib/api/: index.ts
front/src/lib/components/: About.svelte  Dropdown.svelte  Empty.svelte  Error.svelte  Footer.svelte  Gallery.svelte  Header.svelte  Litter.svelte  Loading.svelte  Locale.svelte  Nav.svelte  Navigation.svelte  Puppies.svelte  ThemeToggle.svelte  Thumbnail.svelte  index.ts
front/src/lib/dark-mode/: index.ts
front/src/lib/i18n/: index.ts
front/src/lib/locales/: ee.json  en.json
front/src/routes/: +layout.svelte  +layout.ts  +page.svelte
proxy/: Dockerfile  nginx.conf  nginx.dev.conf  self-signed.cert  self-signed.key
sqlite/: schema.sql
src/: app.css  app.html
src/lib/components/: About.svelte  Dropdown.svelte  Footer.svelte  Header.svelte  Landing.svelte  Navigation.svelte  News.svelte  Puppies.svelte
src/routes/: +page.svelte  Footer.svelte  Header.svelte  Landing.svelte  Navigation.svelte  News.svelte  Welcome.svelte
static/: dark_header.jpg:Zone.Identifier  kohver.jpg:Zone.Identifier  rand.jpg:Zone.Identifier
website/: .dockerignore  .gitignore  Dockerfile  README.md  bun.lockb  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  vite.config.ts
website/src/: ambient.d.ts  app.css
website/src/lib/: forms.ts  index.ts
website/src/routes/: +error.svelte  +layout.svelte  +layout.ts  +page.svelte
website/static/: aus-puppy.avif  sm-aus-puppy.avif
(+149 files in other folders)
