[package]
name = "back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tower = "0.4.13"
jsonwebtoken = "9.3.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
