[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
axum = "0.7.5"
jsonwebtoken = "9.3.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
sha2 = "0.10.8"
serde_json = "1.0.120"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
