[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
axum = "0.7.5"
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["cors"] }
base64 = "0.22.1"
tokio-util = { version = "0.7.11", features = ["io"] }
image = "0.25.1"
tokio-postgres = "0.7.10"
