[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = "../db" }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { version = "0.7.11", features = ["io"] }
tokio-postgres = "0.7.10"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tower-http = { version = "0.5.2", features = ["cors"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
jsonwebtoken = "9.3.0"
sha2 = "0.10.8"
base64 = "0.22.1"
image = "0.25.1"
