[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cornucopia_async = "0.6.0"
futures = "0.3.30"
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = "1.38.0"
tokio-postgres = "0.7.10"

[build-dependencies]
cornucopia = "0.9.0"
